--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # Set the default behavior, in case people don't have core.autocrlf set
 * text=auto
-
 # Require Unix line endings
 * text eol=lf
+*.zip filter=lfs diff=lfs merge=lfs -text
